<resources>
    <string name="app_name">AnyDebug</string>
    <string name="apply">Apply</string>
    <string name="perform_origin_click">Original Click</string>
    <string name="successfully_modified">Successfully modified</string>
    <string name="anytext_working_now">AnyText is working now</string>
    <string name="about">About</string>
    <string name="requirement_content">System requirements:\n1.Root\n2.Xposed framework installed</string>
    <string name="github">Github</string>
    <string name="get_source">Get source code on Github</string>
    <string name="caution_text">This software is completely free and open-source, and only for learning usage. Please download this software from my Github page, or compile source code by yourself. Avoid using source-unknown packages.</string>
    <string name="about_description">This software provides functions to change view parameters running currently. It\'s like element inspections in web development. If you got some problems, try to restart your app.</string>
    <string name="caution">Caution</string>
    <string name="cancel">Cancel</string>
    <string name="width">Width</string>
    <string name="width_value">Width value</string>
    <string name="height">Height</string>
    <string name="height_value">Height value</string>
    <string name="enter_text">Enter text</string>
    <string name="text_content">Text Content</string>
    <string name="max_line">Max Line</string>
    <string name="identical">Identical</string>
    <string name="parent">Parent</string>
    <string name="children">Children</string>
    <string name="select_parent">Select Parent</string>
    <string name="select_children">Select Children</string>
    <string name="show_global_layout_bounds">Show Global Layout Bounds</string>
    <string name="force_clickable">Force All Widgets Clickable</string>
    <string name="image_url">Image Url</string>
    <string name="scale_type">Scale Type</string>
    <string name="text_size">Text Size</string>
    <string name="sp">sp</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="ancestors">Ancestors</string>
    <string name="visibility">Visibility</string>
    <string name="title">title</string>
    <string name="margin_title">Margin(dp)-L-T-R-B</string>
    <string name="padding_title">Padding(dp)-L-T-R-B</string>
    <string name="default_channel_name">Control Notification</string>
    <string name="default_channel_desc">Channel to send control notification</string>
    <string name="global_control">Global Control</string>
    <string name="current_enable_state">Current state: %s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="view_id_text">View ID: %s</string>
    <string name="view_parent_id_text">Parent ID: %s</string>
    <string name="view_rule_type">Rule type: %s</string>
    <string name="view_rule_content">Content: %s</string>
    <string name="view_rule_origin_content">Origin Content: %s</string>

    <!-- Preferences strings -->
    <string name="global_edit_enable_key" translatable="false">key_global_edit_enable</string>
    <string name="global_edit_title">Enable Global Edit</string>
    <string name="global_edit_desc">By enabling this option, you will be able to edit attributes of views in an application.</string>

    <string name="edit_persistent_key" translatable="false">key_enable_persistent_edit</string>
    <string name="edit_persistent_title">Enable Persistent Edit</string>
    <string name="edit_persistent_desc">When this option is on, your changes will be stored on supported views.</string>

    <string name="about_key" translatable="false">key_about</string>

    <string name="about_desc">Show information about this application.</string>
    <string name="function">Function</string>
    <string name="rules">Rules</string>
    <string name="subtitle" translatable="false">subtitle</string>
    <string name="details">details</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="visible" translatable="false">Visible</string>
    <string name="invisible" translatable="false">Invisible</string>
    <string name="gone" translatable="false">Gone</string>
    <string name="match_parent" translatable="false">MATCH_PARENT</string>
    <string name="wrap_content" translatable="false">WRAP_CONTENT</string>
    <string name="dp_input_hint">Value in dp</string>

    <string name="tile_control_service_label">EditControl</string>

    <string name="context_info">Context Information</string>
    <string name="view_name_text">View class: %s</string>
    <string name="activity_name_text">Activity class: %s</string>
    <string name="context_class_text">Context: %s</string>
    <string name="screen_width">Screen width: %s</string>
    <string name="screen_height">Screen height: %s</string>
</resources>