<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/visibility_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/visible_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/visible" />

        <RadioButton
            android:id="@+id/invisible_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/invisible" />

        <RadioButton
            android:id="@+id/gone_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/gone" />
    </RadioGroup>
</FrameLayout>