<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="always"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AboutFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="?attr/colorSecondary"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSecondary"
                    android:text="@string/about"
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="12dp"
                    android:text="@string/about_description"
                    android:textColor="?attr/colorOnSecondary"
                    android:id="@+id/about_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_marginTop="12dp"
                    android:textColor="?attr/colorOnSecondary"
                    android:text="@string/requirement_content"
                    android:id="@+id/about_content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="?attr/colorSecondary"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/caution"
                    android:id="@+id/caution_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="12dp"
                    android:textColor="?attr/colorOnSecondary"
                    android:text="@string/caution_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>