<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/spec_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/mp_radio"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:tag="ANYDEBUG_IGNORE_HOOK" />

        <RadioButton
            android:id="@+id/rp_radio"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:tag="ANYDEBUG_IGNORE_HOOK" />

        <RadioButton
            android:id="@+id/value_radio"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:tag="ANYDEBUG_IGNORE_HOOK" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mp_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/match_parent" />

        <TextView
            android:id="@+id/rp_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/wrap_content" />

        <EditText
            android:id="@+id/value_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:hint="@string/dp_input_hint"
            android:inputType="number"
            android:tag="ANYDEBUG_IGNORE_HOOK" />
    </LinearLayout>
</LinearLayout>