<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="ANYDEBUG_IGNORE_HOOK"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/bottom_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/details"
            android:textColor="#673AB7"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/apply"
            android:textColor="#673AB7"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/apply_button"
            android:background="@android:color/transparent"
            android:tag="ANYDEBUG_IGNORE_HOOK"
            android:text="@string/cancel"
            android:textColor="#673AB7"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>